WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255226
[macOS] Tab Suspension ~3.5% Membuster MacBookAir8,2 regression
https://bugs.webkit.org/show_bug.cgi?id=255226
Summary
[macOS] Tab Suspension ~3.5% Membuster MacBookAir8,2 regression
Miguel Salinas
Reported
2023-04-10 08:27:24 PDT
When running the membuster benchmark on MacBookAir8,2 with background tab suspension enabled, we are seeing a ~8% regression in performance. It appears to be due to the process having too low of a priority when responding to low memory OS signals.
Attachments
Add attachment
proposed patch, testcase, etc.
Miguel Salinas
Comment 1
2023-04-10 08:28:17 PDT
rdar://106969950
Miguel Salinas
Comment 2
2023-04-14 15:52:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12763
EWS
Comment 3
2023-04-21 14:35:37 PDT
Committed
263264@main
(0420e99f1060): <
https://commits.webkit.org/263264@main
> Reviewed commits have been landed. Closing PR #12763 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug